# julius

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  AGENTS.md  BCNY_INTEL_BRIEF.md  BUGCROWD_ROI_EXECUTIVE_SUMMARY.md  CLAUDE.md  Dockerfile  OUTPUT_DIRECTORY_GUIDELINES.md  PROJECT_ENFORCEMENT_DIRECTIVES.md  README.md  VALIDATION_CHECKLIST.py  bugcrowd_ranking_small_companies.md  bugcrowd_roi_analysis.md  bugcrowd_roi_updater.py  bugcrowd_small_targets_analysis.md  pyproject.toml  validate_output_structure.sh
.agents/agents/: README.md  dom-xss-scanner.md  hackerone-intel-fetcher.md  hackthebox.md  patt-fetcher.md  pentester-executor.md  pentester-orchestrator.md  pentester-validator.md  script-generator.md  skiller.md
.agents/plugins/: marketplace.json
.claude/: OUTPUT_STANDARDS.md
.claude/agents/: CLAUDE.md  dom-xss-scanner.md  hackerone-intel-fetcher.md  hackthebox.md  pentester-executor.md  pentester-orchestrator.md  pentester-validator.md  script-generator.md  skiller.md
.claude/tools/: env-reader.py
bounty_intel/: __init__.py  __main__.py  agent_dispatch.py  bugcrowd_mcp_bridge.py  bugcrowd_session.py  cli.py  client.py  config.py  db.py  mcp_server.py  platforms.py  service.py
bounty_intel/chrome_extension/: popup.html  popup.js
bounty_intel/evidence/: uploader.py
bounty_intel/forecast/: engine.py  fx.py
bounty_intel/migration/: import_existing.py  schema.py
tools/: hackerone-intel-generator.py  hackerone-technique-extractor.py  hackerone-writeup-scraper.py  hunt_memory.py  safety_rails.py  scope_checker.py  validation_gates.py
(+204 files in other folders)
