[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bounty-intel"
version = "0.1.0"
description = "Centralized bug bounty intelligence system with PostgreSQL backend"
requires-python = ">=3.11"
dependencies = [
    # Database
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13,<2.0",
    # Web
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9",
    # GCP
    "google-cloud-storage>=2.14,<3.0",
    "cloud-sql-python-connector[pg8000]>=1.7,<2.0",
    # Utilities
    "requests>=2.31,<3.0",
    "markdown>=3.5,<4.0",
    "nh3>=0.2,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "itsdangerous>=2.1,<3.0",
    "authlib>=1.3,<2.0",
    "httpx>=0.27,<1.0",
    # MCP server
    "mcp[cli]>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
bounty-intel = "bounty_intel.cli:main"
